force-app/main/default/objects/Invoice_Static_Text__c/Invoice_Static_Text__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Invoice Static PDF Text</label>
</CustomObject>