force-app/main/default/objects/Invoice_Static_Text__c/fields/Description_A__c.field-meta.xml
<CustomField>
    <fullName>Description_A__c</fullName>
    <label>Description A</label>
    <type>TextArea</type>
</CustomField>