force-app/main/default/objects/Invoice_Static_Text__c/fields/Description_B__c.field-meta.xml
<CustomField>
    <fullName>Description_B__c</fullName>
    <label>Description B</label>
    <type>TextArea</type>
</CustomField>