force-app/main/default/objects/Invoice_Static_Text__c/fields/Description_C__c.field-meta.xml
<CustomField>
    <fullName>Description_C__c</fullName>
    <label>Description C</label>
    <type>TextArea</type>
</CustomField>